fix: switch baseURL / fix eslint problem

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,12 @@
         "**/*.spec.tsx"
     ] }],
     "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ],
         "no-underscore-dangle": "off",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-static-element-interactions": "off",
